Fix resolve overflow

--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,6 @@
   border-radius: 1rem;
 }
 
-body {
-  overflow-x: hidden;
-  overscroll-behavior-x: none;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
